Added getTiebreak() to AbstractGameState
Used in getOrdinalPosition()
Also fixed bug in MAST with MultiTree mode